--- a/gi-pro-mobile/www/templates/professionalWithServices.html
+++ b/gi-pro-mobile/www/templates/professionalWithServices.html
@@ -43,6 +43,7 @@
                     data="places" on-type="typePlace" placeholder="{{'service_address_placeholder' | translate}}" on-select="selectServiceAddress"></placeautocomplete>
                   <i class="icon ion-map" ng-click="openMap('service')"></i>
                 </div>
+                <div class="padding-horizontal" ng-if="newService.serviceType === 'sostituzioneudienza'">{{'service_tecnotoga' | translate}}</div>
                 <div class="item item-icon-left" ng-if="newService.serviceType === 'sostituzioneudienza'">
                   <i class="icon ion-ios-location"></i>
                   <div class="item item-input item-input-select" ng-click="openSelectOfficePopup()">
