--- a/gi-pro-mobile/scss/ionic.app.scss
+++ b/gi-pro-mobile/scss/ionic.app.scss
@@ -38,8 +38,8 @@ $ionicons-font-path: "../lib/ionic/fonts" !default;
  * Ionic stuff
  */
 
-.platform-ios.platform-cordova:not(.fullscreen) .search-bar {
-  margin-top: 20px;
+.platform-ios.platform-cordova:not(.fullscreen) .mfb-component--tr {
+  margin-top: 45px;
 }
 
 
