--- a/gi-pro-mobile/www/css/ionic.app.css
+++ b/gi-pro-mobile/www/css/ionic.app.css
@@ -9820,8 +9820,8 @@ a.button {
 /*
  * Ionic stuff
  */
-.platform-ios.platform-cordova:not(.fullscreen) .search-bar {
-  margin-top: 20px; }
+.platform-ios.platform-cordova:not(.fullscreen) .mfb-component--tr {
+  margin-top: 45px; }
 
 /*
  * IonicDatePicker, IonicTimePicker
