--- a/gi-pro-mobile/www/templates/menu.html
+++ b/gi-pro-mobile/www/templates/menu.html
@@ -11,11 +11,9 @@
     </ion-nav-view>
   </ion-side-menu-content>
   <ion-side-menu side="left">
-    <!--
-		<ion-header-bar>
-			<h1 class="title">Left</h1>
-		</ion-header-bar>
-		-->
+    <ion-header-bar class="bar-positive">
+      <!--<h1 class="title">Left</h1>-->
+    </ion-header-bar>
     <ion-content>
       <ion-list>
         <ion-item nav-clear menu-close class="item item-icon-left" ui-sref-active="active" ui-sref="app.serviceAndProf">
