Fixing issues on iOS

--- a/gi-pro-mobile/www/templates/modal_pois.html
+++ b/gi-pro-mobile/www/templates/modal_pois.html
@@ -1,4 +1,4 @@
-<ion-modal-view class="modal-pois has-header has-footer">
+<ion-modal-view class="modal-pois has-footer">
 	<ion-header-bar>
 		<div class="title">Ricerca POI</div>
 		<button class="button button-stable button-clear icon ion-close" ng-click="closePoisModal()"></button>
