--- a/gi-pro-mobile/www/templates/modal_professions.html
+++ b/gi-pro-mobile/www/templates/modal_professions.html
@@ -1,4 +1,4 @@
-<ion-modal-view class="modal-filter has-header">
+<ion-modal-view class="modal-filter">
   <ion-header-bar>
     <div class="title">{{'modal_professions' | translate}}</div>
     <!--<div class="title"></div>-->
