--- a/gi-pro-mobile/www/templates/modal_map.html
+++ b/gi-pro-mobile/www/templates/modal_map.html
@@ -1,5 +1,5 @@
 <ion-modal-view>
-  <ion-header-bar align-title="left" class="bar-positive-100">
+  <ion-header-bar>
     <button class="button button-stable button-clear icon" ng-class="{'ion-android-arrow-back': platform.isAndroid(), 'ion-ios-arrow-back': !platform.isAndroid()}"
       ng-click="closeMap()"></button>
       <div class="title">{{'poi_select_map' | translate}}</div>
