--- a/gi-pro-mobile/www/css/ionic.app.css
+++ b/gi-pro-mobile/www/css/ionic.app.css
@@ -10430,6 +10430,10 @@ placeautocomplete {
 /*
  * SEARCH
  */
+#searchbar input {
+  background: transparent;
+  height: 16px; }
+
 .search .row,
 .search .col {
   padding: 0; }
