--- a/gi-pro-mobile/www/templates/menu.html
+++ b/gi-pro-mobile/www/templates/menu.html
@@ -1,6 +1,7 @@
 <ion-side-menus enable-menu-with-back-views="false">
   <ion-side-menu-content>
-    <ion-nav-bar class="bar-calm" ng-class="{'item-input-inset': searchBar.show}">
+    <ion-nav-bar class="bar-calm">
+      <!--ng-class="{'item-input-inset': searchBar.show}"-->
       <ion-nav-back-button>
       </ion-nav-back-button>
       <ion-nav-buttons side="left">
