Fixing some issues found by Mistral

--- a/gi-pro-mobile/www/templates/registration_step_1.html
+++ b/gi-pro-mobile/www/templates/registration_step_1.html
@@ -15,7 +15,7 @@
       <form name="regform1">
         <div class="list list-inset">
           <label class="item item-input item-input-cf">
-            <input type="text" ng-model="registration.pec" placeholder="{{'pec_placeholder' | translate}}" ng-required="true">
+            <input type="email" ng-model="registration.pec" placeholder="{{'pec_placeholder' | translate}}" ng-required="true">
           </label>
           <label class="item item-input item-input-cf">
             <input type="password" id="pw1" name="pw1" ng-model="registration.password" placeholder="{{'password' | translate}}" ng-required="true" />
