--- a/gi-pro-mobile/www/templates/serviceAndProf.html
+++ b/gi-pro-mobile/www/templates/serviceAndProf.html
@@ -65,8 +65,7 @@
           <!-- Map view -->
           <div class="map-visualization" ng-if="!viewAsList">
             <div id="modal-map-container" data-tap-disabled="true">
-              <leaflet event-broadcast="events" center="center" markers="servicesMarkers" ng-style="styles.container" ng-init="initServicesTab()"
-                id="servicesMap"></leaflet>
+              <leaflet event-broadcast="events" center="center" markers="servicesMarkers" ng-style="styles.container" id="servicesMap"></leaflet>
             </div>
           </div>
         </ion-content>
@@ -120,8 +119,7 @@
           <!-- Map view -->
           <div class="map-visualization" ng-if="!viewAsList">
             <div id="modal-map-container" data-tap-disabled="true">
-              <leaflet event-broadcast="events" center="center" markers="professionalMarkers" ng-style="styles.container" ng-init="initProfessionalsTab()"
-                id="professionalsMap"></leaflet>
+              <leaflet event-broadcast="events" center="center" markers="professionalMarkers" ng-style="styles.container" id="professionalsMap"></leaflet>
             </div>
           </div>
         </ion-content>
