--- a/gi-pro-mobile/www/templates/credits.html
+++ b/gi-pro-mobile/www/templates/credits.html
@@ -70,7 +70,7 @@
 			<div class="col">
 				<span class="credits-title">{{'credits_info' | translate}}</span>
 				<br/>
-				<a class="credits_mail" href="mailto:tecnotoga@smartcommunitylab.it">tecnotoga@smartcommunitylab.it</a>
+				<a class="credits_mail" href="mailto:smartgipro@smartcommunitylab.it">smartgipro@smartcommunitylab.it</a>
 			</div>
 		</div>
 	</ion-content>
