--- a/gi-pro-mobile/www/templates/registration_step_2.html
+++ b/gi-pro-mobile/www/templates/registration_step_2.html
@@ -47,7 +47,7 @@
           <div class="cf_piva">
           </div>
           <div class="item item-input">
-            <input type="text" ng-model="registration.albo" ng-required="true" placeholder="{{'albo_placeholder' | translate}}">
+            <input type="text" ng-model="registration.albo" placeholder="{{'albo_placeholder' | translate}}" ng-required="true">
           </div>
           <ion-checkbox class="checkbox-assertive" ng-model="registration.declaration" ng-required="true">{{'register_declaration' | translate}}</ion-checkbox>
         </div>
