--- a/gi-pro-mobile/www/css/ionic.app.css
+++ b/gi-pro-mobile/www/css/ionic.app.css
@@ -9966,6 +9966,8 @@ input[readonly] {
 /* Menu */
 .menu {
   background-color: #1786c8; }
+  .menu .bar.bar-header {
+    background-image: none; }
   .menu .list .item {
     color: white;
     border-color: transparent;
