Profile completion popup

--- a/gi-pro-mobile/scss/ionic.app.scss
+++ b/gi-pro-mobile/scss/ionic.app.scss
@@ -1010,6 +1010,13 @@ placeautocomplete {
   text-align: center;
 }
 
+.popup-profilecompletion {
+  .item-checkbox {
+    background-color: transparent;
+    border: 0px;
+  }
+}
+
 
 /*
  * LOGIN AND REGISTRATION
