--- a/gi-pro-mobile/www/templates/credits.html
+++ b/gi-pro-mobile/www/templates/credits.html
@@ -5,7 +5,7 @@
 	<ion-content>
 		<div class="row">
 			<div class="col">
-				<div class="credits_title">{{'app'|translate}}</div>
+				<div class="credits_title">{{'app' | translate}}</div>
 			</div>
 		</div>
 		<div class="row credits_row version">
@@ -13,15 +13,43 @@
 		</div>
 
 		<div class="row credits_row credits_subtitle">
+			<div class="col"><span>{{'credits_initiative' | translate}}</span></div>
+		</div>
+		<div class="row credits_row">
+			<div class="col col-80 col-offset-10 col-center">
+				<a href="#" onclick="window.open('http://provincia.tn.it/', '_system', 'location=yes'); return false;">
+					<img class="image center" src="img/pat.jpg" width="100%" />
+				</a>
+			</div>
+		</div>
+		<div class="row credits_row">
+			<div class="col col-33 col-offset-33 col-center">
+				<a href="#" onclick="window.open('http://www.politichegiovanili.provincia.tn.it/', '_system', 'location=yes'); return false;">
+					<img class="image center" src="img/politichegiovanili.jpg" width="100%" />
+				</a>
+			</div>
+		</div>
+		<div class="row credits_row credits_subtitle">
 			<div class="col"><span>{{'credits_project' | translate}}</span></div>
 		</div>
 		<div class="row credits_row">
-			<div class="col col-center">
+			<div class="col col-33 col-offset-33 col-center">
+				<a href="#" onclick="window.open('http://www.gipro.tn.it/', '_system', 'location=yes'); return false;">
+					<img class="image center" src="img/gipro.png" width="100%" />
+				</a>
+			</div>
+		</div>
+		<div class="row credits_row credits_subtitle">
+			<div class="col"><span>{{'credits_contribute' | translate}}</span></div>
+		</div>
+		<div class="row credits_row">
+			<div class="col col-80 col-offset-10 col-center">
 				<a href="#" onclick="window.open('http://www.consiglionazionaleforense.it/', '_system', 'location=yes'); return false;">
 					<img class="image center" src="img/cnf.jpg" width="100%" />
 				</a>
 			</div>
 		</div>
+		<!--
 		<div class="row credits_row">
 			<div class="col col-60 col-offset-20 col-center">
 				<a href="#" onclick="window.open('http://www.consiglionazionaleforense.it/web/cnf/avvocatura-giovane', '_system', 'location=yes'); return false;">
@@ -36,6 +64,7 @@
 				</a>
 			</div>
 		</div>
+		-->
 
 		<div class="row credits_row credits_subtitle">
 			<div class="col"><span>{{'credits_developer' | translate}}</span></div>
@@ -47,30 +76,11 @@
 				</a>
 			</div>
 		</div>
-
-		<div class="row credits_row credits_subtitle">
-			<div class="col"><span>{{'credits_initiative' | translate}}</span></div>
-		</div>
-		<div class="row credits_row">
-			<div class="col col-center">
-				<a href="#" onclick="window.open('http://www.consiglionazionaleforense.it/', '_system', 'location=yes'); return false;">
-					<img class="image center" src="img/cnf.jpg" width="100%" />
-				</a>
-			</div>
-		</div>
-		<div class="row credits_row">
-			<div class="col col-50 col-offset-25 col-center">
-				<a href="#" onclick="window.open('http://www.gipro.tn.it/', '_system', 'location=yes'); return false;">
-					<img class="image center" src="img/gipro.png" width="100%" />
-				</a>
-			</div>
-		</div>
-
 		<div class="row credits_row credits_subtitle">
 			<div class="col">
 				<span class="credits-title">{{'credits_info' | translate}}</span>
 				<br/>
-				<a class="credits_mail" href="mailto:smartgipro@smartcommunitylab.it">smartgipro@smartcommunitylab.it</a>
+				<a class="credits_mail" href="mailto:gipro-help@smartcommunitylab.it">gipro-help@smartcommunitylab.it</a>
 			</div>
 		</div>
 	</ion-content>
