--- a/gi-pro-mobile/www/templates/registration_step_2.html
+++ b/gi-pro-mobile/www/templates/registration_step_2.html
@@ -49,7 +49,13 @@
           <div class="item item-input">
             <input type="text" ng-model="registration.albo" placeholder="{{'albo_placeholder' | translate}}" ng-required="true">
           </div>
-          <ion-checkbox class="checkbox-assertive" ng-model="registration.declaration" ng-required="true">{{'register_declaration' | translate}}</ion-checkbox>
+          <ion-checkbox class="checkbox-assertive" ng-model="registration.declarationCategory" ng-required="true">{{'register_declaration_category' | translate}}</ion-checkbox>
+          <div class="privacy">
+            <a href="#" onclick="window.open('http://gipro.tn.it/privacy-app-smart-gipro', '_system', 'location=yes'); return false;">
+              {{'register_privacy_info' | translate}}
+            </a>
+          </div>
+          <ion-checkbox class="checkbox-assertive" ng-model="registration.declarationPrivacy" ng-required="true">{{'register_privacy_accept' | translate}}</ion-checkbox>
         </div>
         <!--<button class="button button-block button-assertive" ng-click="register()" ng-disabled="!registration.privacy">{{'register' | translate}}</button>-->
         <button class="button button-block button-assertive" ng-click="register()" ng-disabled="regform1.$invalid">{{'register' | translate}}</button>
